.provarCaches/00D5f000005vwGkEAI/objects/rstk__socondev__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_socondev</customHelpPage>
    <description>socondev__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_asset__c</fullName>
        <formula>rstk__socondev_sowarr__r.rstk__sowarr_asset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Associated Asset ID set on the Shipped Item Warranty record for the given device.</inlineHelpText>
        <label>Asset ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>/*
SAMB:IMPORTANT NOTE: DONT CHANGE THIS EXPRESSION BECAUSE THE CODE IN SOWARR TRIGGER ASSUMES THIS EXPRESSION. IF THIS NEEDS TO BE CHANGED, THEN MAKE SURE THAT THE SAME CHANGE IS MADE TO THE SOWARR TRIGGER ALSO. 
*/

rstk__socondev_socontract__r.rstk__externalid__c +  rstk__socondev_sowarr__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__socondev_sowarr__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_activateby__c</fullName>
        <inlineHelpText>Date by which this Device is to be activated, after which charges may start accruing.</inlineHelpText>
        <label>Activate By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the device is active and any appropriate recurring billing will occur.</inlineHelpText>
        <label>Device is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_altextid__c</fullName>
        <externalId>true</externalId>
        <label>socondev_altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__socondev_beginhold__c</fullName>
        <inlineHelpText>When &apos;Device is on Billing Hold&apos; is checked, this field must be set, representing the date as-of which applicable recurring charges for the given device will discontinue.</inlineHelpText>
        <label>Interim Hold Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_billhold__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, no applicable recurring charges will be accrued against the device specified.</inlineHelpText>
        <label>Device on Billing Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_billstatus__c</fullName>
        <inlineHelpText>The current Billing Status for this Device.  Options are

Pending
Active
On Hold
​​​​​​​Terminated</inlineHelpText>
        <label>Device Billing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socondev_chgcomments__c</fullName>
        <inlineHelpText>When changes are made to this Contract Covered Device record, a history record is created.  This optional field can be used to notate any appropriate comments regarding the last change made.</inlineHelpText>
        <label>Last Change Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_chgreason__c</fullName>
        <inlineHelpText>Reason for Hold.  Options are 

None
Set Imterim Hold Date
Clear Interim Hold Date</inlineHelpText>
        <label>Device Management Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-none- (user defined)</fullName>
                </value>
                <value>
                    <fullName>Set Interim Hold Date</fullName>
                </value>
                <value>
                    <fullName>Clear Interim Hold Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socondev_enddate__c</fullName>
        <inlineHelpText>Required when setting a device as Active. Identifies the date in which applicable recurring charges for the given device ends.</inlineHelpText>
        <label>Current Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_endhold__c</fullName>
        <inlineHelpText>When &apos;Device is on Billing Hold&apos; is checked, this field must be set, representing the date after which applicable recurring charges for the given device will resume.</inlineHelpText>
        <label>Interim Hold End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_lastbilling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Last Billing on This Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_lastbillingpb__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>One Last Periodic Billing ID</label>
        <referenceTo>rstk__soconpbill__c</referenceTo>
        <relationshipLabel>Contract Covered Serialized Devices</relationshipLabel>
        <relationshipName>socondevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_numbillings__c</fullName>
        <inlineHelpText>Defines the # of Billing Periods for a Device specified on a Contract, which is derived from based on the length &amp; frequency of the Contract Term. For example, if the Contract Term is 12 months &amp; the billing frequency is Quarterly, this will be set to 4.</inlineHelpText>
        <label>Number of Billing Periods</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_socontract__c</fullName>
        <inlineHelpText>The Contract against which this device was shipped.</inlineHelpText>
        <label>Contract Master</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Covered Devices</relationshipLabel>
        <relationshipName>socondevs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_sorma__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When an RMA is released for this device, this field is automatically set to the most recent RMA number.</inlineHelpText>
        <label>Last RMA Number</label>
        <referenceTo>rstk__sorma__c</referenceTo>
        <relationshipLabel>Contract Covered Serialized Devices</relationshipLabel>
        <relationshipName>socondevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_sowarr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The specific serialized device shipped against the given Contract.</inlineHelpText>
        <label>Covered Serialized Device</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Contract Covered Serialized Devices</relationshipLabel>
        <relationshipName>socondevs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_startdate__c</fullName>
        <inlineHelpText>Required when setting a device as Active.  Identifies the date in which applicable recurring charges for the given device begins.</inlineHelpText>
        <label>Current Coverage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_termdate__c</fullName>
        <inlineHelpText>The expected date that this device will be terminated and no more billing will occur.</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the device has been terminated.</inlineHelpText>
        <label>Device Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_transdate__c</fullName>
        <inlineHelpText>The date the device was transferred from the given Contract.</inlineHelpText>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_transferred__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the device has been transferred to another Contract.</inlineHelpText>
        <label>Device Transferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socondev_transto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Contact this device was transferred to.</inlineHelpText>
        <label>Transferred To Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Contract Covered Serialized Devices (Transferred To Contract)</relationshipLabel>
        <relationshipName>socondevs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Covered Serialized Devices</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__details</fullName>
        <columns>NAME</columns>
        <columns>rstk__socondev_socontract__c</columns>
        <columns>rstk__socondev_sowarr__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__formula_extid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__socondev_sowarr__c</field>
            <operation>contains</operation>
            <value>g-</value>
        </filters>
        <label>details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Covered Serialized Devices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Covered Serialized Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Covered_Serialized_Device</fullName>
        <active>true</active>
        <description>Covered Serialized Device is required .</description>
        <errorConditionFormula>ISBLANK(rstk__socondev_sowarr__c) || (ISNEW() &amp;&amp; rstk__socondev_socontract__c &lt;&gt;  rstk__socondev_sowarr__r.rstk__sowarr_socontract__c)</errorConditionFormula>
        <errorMessage>Covered Serialized Device is required .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Current_Coverage_End_Date</fullName>
        <active>true</active>
        <description>Current Coverage End Date is required if Device is Active and must be greater than Current Coverage Start Date .</description>
        <errorConditionFormula>(rstk__socondev_active__c &amp;&amp; ISBLANK( rstk__socondev_enddate__c )) || ( rstk__socondev_enddate__c &lt;  rstk__socondev_startdate__c )</errorConditionFormula>
        <errorMessage>Current Coverage End Date is required if Device is Active and must be greater than or equal to Current Coverage Start Date .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Current_Coverage_Start_Date</fullName>
        <active>true</active>
        <description>Current Coverage Start Date is required if Device is Active.</description>
        <errorConditionFormula>rstk__socondev_active__c &amp;&amp;  ISBLANK( rstk__socondev_startdate__c )</errorConditionFormula>
        <errorMessage>Current Coverage Start Date is required if Device is Active.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Interim_Hold_End_Date</fullName>
        <active>true</active>
        <description>Begin &amp; End Hold Dates both can be blank. If Begin Hold is Specified, End Hold must also be specified and should be greater than Begin Hold.</description>
        <errorConditionFormula>(ISBLANK( rstk__socondev_beginhold__c ) &amp;&amp; !ISBLANK( rstk__socondev_endhold__c )) || (!ISBLANK( rstk__socondev_endhold__c ) &amp;&amp;  ISBLANK(  rstk__socondev_enddate__c )) || (rstk__socondev_endhold__c &lt; rstk__socondev_beginhold__c )</errorConditionFormula>
        <errorMessage>Begin &amp; End Hold Dates both can be blank. If Begin Hold is Specified, End Hold must also be specified and should be greater than Begin Hold.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Interim_Hold_Start_Date</fullName>
        <active>true</active>
        <description>Interim Hold Start Date is Required and must be greater than Current Coverage Start Date.</description>
        <errorConditionFormula>(ISBLANK(rstk__socondev_startdate__c) &amp;&amp;  !ISBLANK(rstk__socondev_beginhold__c)) || rstk__socondev_beginhold__c &lt; rstk__socondev_startdate__c</errorConditionFormula>
        <errorMessage>Interim Hold Start Date is Required and must be greater than Current Coverage Start Date.</errorMessage>
    </validationRules>
</CustomObject>